--- a/app/src/main/res/drawable/main_button.xml
+++ b/app/src/main/res/drawable/main_button.xml
@@ -2,10 +2,11 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <gradient android:startColor="@color/colorAccent" android:endColor="@color/colorPrimary"
-        android:type="linear"></gradient>
+    <gradient
+        android:startColor="@color/darkAccent"
+        android:endColor="@color/colorAccent"
+        />
 
-    <solid android:color="@color/colorAccent"></solid>
 
 
     <corners android:topLeftRadius="10dp" android:topRightRadius="10dp"
