--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,48 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/layout_rounded_bg"
+    android:background="#FAFAFA"
     android:id="@+id/layout"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/linearLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="315dp"
+        android:background="@drawable/main_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal" />
 
 
     <TextView
         android:id="@+id/titleofscreen"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:fontFamily="@font/montserrat"
-        android:paddingTop="10dp"
-        android:text="@string/generate_report"
-        android:gravity="center"
         android:layout_gravity="center"
-        android:layout_marginTop="60dp"
-        android:textColor="@color/black"
-        android:textSize="25sp" />
+        android:layout_marginTop="80dp"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        android:paddingTop="10dp"
+        android:text="@string/anxiety_analysis"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/generate_report_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="30dp"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        android:text="@string/anxiety_analysis_description"
+        android:textColor="@color/lightGrey"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleofscreen" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/new_white_card"
+        android:elevation="5dp"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/generate_report_description">
 
         <TextView
             android:id="@+id/text1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="20dp"
             android:fontFamily="@font/montserrat"
             android:text="@string/duration"
             android:textColor="#515C6F"
-            android:layout_marginBottom="10dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/contLay"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/text1"
+            tools:layout_editor_absoluteX="20dp">
 
             <RadioGroup
                 android:id="@+id/radio_group"
@@ -58,7 +105,7 @@
                 <RadioButton
                     android:id="@+id/radioButton1"
                     android:layout_width="match_parent"
-                    android:layout_height="54dp"
+                    android:layout_height="40dp"
                     android:layout_margin="5dp"
                     android:background="@drawable/white_background"
                     android:focusable="auto"
@@ -70,7 +117,7 @@
                 <RadioButton
                     android:id="@+id/radioButton2"
                     android:layout_width="match_parent"
-                    android:layout_height="54dp"
+                    android:layout_height="40dp"
                     android:layout_margin="5dp"
                     android:background="@drawable/white_background"
                     android:focusable="auto"
@@ -82,7 +129,7 @@
                 <RadioButton
                     android:id="@+id/radioButton3"
                     android:layout_width="match_parent"
-                    android:layout_height="54dp"
+                    android:layout_height="40dp"
                     android:layout_margin="5dp"
                     android:background="@drawable/white_background"
                     android:focusable="auto"
@@ -116,19 +163,19 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/start" />
+                        android:fontFamily="@font/montserrat"
+                        android:text="@string/start_date"
+                        android:textColor="#515C6F" />
 
-                    <TextView
-                        android:id="@+id/start_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="DD/MM/YYYY" />
 
                     <Button
                         android:id="@+id/start"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/start" />
+                        android:layout_height="40dp"
+                        android:background="@drawable/custom_edit_text"
+                        android:fontFamily="@font/montserrat"
+                        android:text="@string/set_start"
+                        android:textColor="#515C6F" />
 
                 </LinearLayout>
 
@@ -142,35 +189,34 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/end" />
+                        android:fontFamily="@font/montserrat"
+                        android:text="@string/end_date"
+                        android:textColor="#515C6F" />
 
-                    <TextView
-                        android:id="@+id/end_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="DD/MM/YYYY" />
 
                     <Button
                         android:id="@+id/end"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/end" />
+                        android:layout_height="40dp"
+                        android:background="@drawable/custom_edit_text"
+                        android:fontFamily="@font/montserrat"
+                        android:text="@string/set_end"
+                        android:textColor="#515C6F" />
 
                 </LinearLayout>
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <Button
         android:id="@+id/generate_report_btn"
-        android:layout_gravity="center"
         android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:background="@drawable/main_button"
         android:fontFamily="@font/montserrat"
         android:padding="3dp"
@@ -179,7 +225,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
         android:textSize="18sp"
-        android:typeface="normal" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
