--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -171,7 +171,7 @@
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingStart="10dp"
-                android:text="@string/demographic_information"
+                android:text="@string/my_information"
                 android:textColor="#515C6F"
                 android:textSize="15sp" />
 
@@ -277,7 +277,7 @@
                 android:fontFamily="@font/montserrat"
                 android:gravity="center_vertical"
                 android:paddingEnd="10dp"
-                android:text="English"
+                android:text="@string/english"
                 android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp"
@@ -301,7 +301,7 @@
                 android:layout_weight="1"
                 android:fontFamily="monospace"
                 android:paddingTop="10dp"
-                android:text="Arabic"
+                android:text="@string/arabic"
                 android:textAlignment="textEnd"
                 android:textColor="#66515C6F"
                 android:textSize="15sp"
